# imxrt-flash-algorithm

./: Cargo.toml  README.md  build.sh  link.x  template.yaml
.cargo/: config.toml
src/: chip.rs  inflate.rs  log.rs  main.rs
src/rom_api/: bindings.rs  mod.rs
